--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ elseif (${COMPILER} STREQUAL "GCC")
     set(USE_CXX_FLAGS_RELEASE "-std=c++11 -m64 -O3 -Wall -Wno-unused-local-typedefs -march=native -fopenmp -DNDEBUG" CACHE STRING "")
 elseif (${COMPILER} STREQUAL "Clang")
     message(STATUS "Setting flags for Clang compiler")
-    set(USE_CXX_FLAGS_DEBUG "-std=c++11 -stdlib=libc++ -mmacosx-version-min=10.8 -m64 -O0 -Wall -ggdb" CACHE STRING "")
-    set(USE_CXX_FLAGS_RELEASE "-std=c++11 -stdlib=libc++ -mmacosx-version-min=10.8 -m64 -O3 -Wall -march=native -DNDEBUG" CACHE STRING "")
+    set(USE_CXX_FLAGS_DEBUG "-std=c++11 -stdlib=libc++ -m64 -O0 -Wall -ggdb" CACHE STRING "")
+    set(USE_CXX_FLAGS_RELEASE "-std=c++11 -stdlib=libc++ -m64 -O3 -Wall -march=native -DNDEBUG" CACHE STRING "")
 endif()
 
 set(CMAKE_CXX_FLAGS_DEBUG "${USE_CXX_FLAGS_DEBUG} -DSTORAGE_TYPE_OF_FERMIONIC_STATE=uint${BASIS_NUMBER_OF_BITS}_t")
