Build system improvements.
* Improved cmake files.
* Version is no longer automatically updated from git. To manually
  update it from git run `./setup.py version`.
* `_version.py` included. This makes it easy to directly install from
  tarballs downloaded from Bitbucket / GitHub (with a correct verion
  set).
* Minor improvements to basis class. This fixes an issue where the
  basis test would not pass when compiled with clang.
* Updated README.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,19 +20,24 @@ target_link_libraries(_qca
     ${Boost_LIBRARIES}
     ${PYTHON_LIBRARIES})
 
-# The Python module always needs to have the name _qca.so.
-get_target_property(LIB_FILENAME _qca LOCATION)
+get_target_property(qca_filename _qca LOCATION)
 if (APPLE)
     # This makes sure we always link against the absolute filename of the
-    # Python library. Speficially, I needed this to link properly against the
-    # Anaconda Python distribution on OS X.
-    execute_process(COMMAND bash -c "otool -D ${PYTHON_LIBRARIES} | tail -n1 | tr -d '\n'" OUTPUT_VARIABLE INSTALL_NAME)
-    add_custom_command(TARGET _qca
-        POST_BUILD
-        COMMAND install_name_tool -change ${INSTALL_NAME} ${PYTHON_LIBRARIES} ${LIB_FILENAME}
-        COMMAND mv ${LIB_FILENAME} ${CMAKE_SOURCE_DIR}/qca/_qca.so)
-else()
-    add_custom_command(TARGET _qca
-        POST_BUILD
-        COMMAND mv ${LIB_FILENAME} ${CMAKE_SOURCE_DIR}/qca/_qca.so)
-endif()
+    # Python and Boost library. Specifically, I needed this to link properly
+    # against the Anaconda Python distribution on OS X.
+    foreach(lib ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
+        execute_process(
+            COMMAND 
+            bash -c "otool -D ${lib} | tail -n1 | tr -d '\n'"
+            OUTPUT_VARIABLE lib_install_name)
+        add_custom_command(
+            TARGET _qca
+            POST_BUILD
+            COMMAND install_name_tool -change ${lib_install_name} ${lib} ${qca_filename})
+    endforeach(lib)
+endif(APPLE)
+
+# The Python module always needs to have the name _qca.so.
+add_custom_command(TARGET _qca
+    POST_BUILD
+    COMMAND mv ${qca_filename} ${CMAKE_SOURCE_DIR}/qca/_qca.so)
